--- a/PortFolio.html
+++ b/PortFolio.html
@@ -21,5 +21,23 @@
         <a href="#Contact">Contact</a>
       </nav>
     </header>
+
+    <section class="Main">
+      <div>
+        <h2>
+          Hello,Iam Nourhan <br />
+          <span>Front-end Developer</span>
+        </h2>
+
+        <h3>I develop webpages</h3>
+        <a href="#projects" class="main-btn">View my projects</a>
+        <div class="links">
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-thin fa-inbox"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></i></a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
