adding new section

--- a/porto.html
+++ b/porto.html
@@ -13,7 +13,7 @@
     <title>My portofoilio</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <a href="#" class="logo">Nourhan </a>
       
       <nav class="Navigation">
@@ -26,7 +26,7 @@
     <section class="Main">
       <div>
         <h2>
-          <p class=icon><i class="fa-solid fa-sun"></i></p>
+          <i id="icon1"class="fa-solid fa-sun"></i>
           Hello,Iam Nourhan <br />
           <span>Front-end Developer</span>
         </h2>
@@ -46,10 +46,11 @@
     <section class="service">
       <div class="service-flex">
         <div class="column">
-          <img src
+          <img src=""
         </div>
       </div>
 
     </section>
   </body>
+  <script src="javaScript/javaScript.js"></script>
 </html>
