adding new sections

--- a/porto.html
+++ b/porto.html
@@ -46,7 +46,32 @@
     <section class="service">
       <div class="service-flex">
         <div class="column">
-          <img src=""
+          <!-- <i class="fa-light fa-code"></i> -->
+          <i class="fa-regular fa-window-maximize"></i>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus inventore in, distinctio fuga aliquam fugiat qui ipsum sapiente nemo voluptatum deserunt molestiae sunt quas magnam consequatur sed excepturi ipsam doloremque.</p>
+          <!-- <img src="" -->
+        </div>
+               <!-- 2ndcolumn -->
+
+
+        <div class="column">
+          <!-- <i class="fa-light fa-code"></i> -->
+          <i class="fa-regular fa-file-lines"></i>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus inventore in, distinctio fuga aliquam fugiat qui ipsum sapiente nemo voluptatum deserunt molestiae sunt quas magnam consequatur sed excepturi ipsam doloremque.</p>
+          <!-- <img src="" -->
+        </div>
+
+           <!-- 3rdcolumn -->
+
+
+
+
+
+        <div class="column">
+          <!-- <i class="fa-light fa-code"></i> -->
+          <i class="fa-solid fa-fill"></i>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus inventore in, distinctio fuga aliquam fugiat qui ipsum sapiente nemo voluptatum deserunt molestiae sunt quas magnam consequatur sed excepturi ipsam doloremque.</p>
+          <!-- <img src="" -->
         </div>
       </div>
 
