editing second section and adding new section

--- a/porto.html
+++ b/porto.html
@@ -43,13 +43,15 @@
     </section>
 
 
-    <section class="service">
+    <section class="Services" id="services">
+      <h2 class="special-heading">SERVICE</h2>
       <div class="service-flex">
         <div class="column">
           <!-- <i class="fa-light fa-code"></i> -->
           <i class="fa-regular fa-window-maximize"></i>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus inventore in, distinctio fuga aliquam fugiat qui ipsum sapiente nemo voluptatum deserunt molestiae sunt quas magnam consequatur sed excepturi ipsam doloremque.</p>
+          <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus inventore in, distinctio fuga aliquam fugiat qui ipsum sapiente nemo voluptatum deserunt molestiae sunt quas magnam consequatur sed excepturi ipsam doloremque.</p> -->
           <!-- <img src="" -->
+          <h3>Responsive web design</h3>
         </div>
                <!-- 2ndcolumn -->
 
@@ -57,8 +59,9 @@
         <div class="column">
           <!-- <i class="fa-light fa-code"></i> -->
           <i class="fa-regular fa-file-lines"></i>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus inventore in, distinctio fuga aliquam fugiat qui ipsum sapiente nemo voluptatum deserunt molestiae sunt quas magnam consequatur sed excepturi ipsam doloremque.</p>
+          <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus inventore in, distinctio fuga aliquam fugiat qui ipsum sapiente nemo voluptatum deserunt molestiae sunt quas magnam consequatur sed excepturi ipsam doloremque.</p> -->
           <!-- <img src="" -->
+          <h3>Clean code</h3>
         </div>
 
            <!-- 3rdcolumn -->
@@ -70,11 +73,16 @@
         <div class="column">
           <!-- <i class="fa-light fa-code"></i> -->
           <i class="fa-solid fa-fill"></i>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus inventore in, distinctio fuga aliquam fugiat qui ipsum sapiente nemo voluptatum deserunt molestiae sunt quas magnam consequatur sed excepturi ipsam doloremque.</p>
+          <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus inventore in, distinctio fuga aliquam fugiat qui ipsum sapiente nemo voluptatum deserunt molestiae sunt quas magnam consequatur sed excepturi ipsam doloremque.</p> -->
           <!-- <img src="" -->
+          <h3>Css animations</h3>
         </div>
       </div>
 
+    </section>
+
+    <section class="projects" id="Projects">
+      <span id= "projecttitle">Projects</span>
     </section>
   </body>
   <script src="javaScript/javaScript.js"></script>
