--- a/porto.html
+++ b/porto.html
@@ -47,43 +47,79 @@
       <h2 class="special-heading">SERVICE</h2>
       <div class="service-flex">
         <div class="column">
-          <!-- <i class="fa-light fa-code"></i> -->
-          <i class="fa-regular fa-window-maximize"></i>
-          <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus inventore in, distinctio fuga aliquam fugiat qui ipsum sapiente nemo voluptatum deserunt molestiae sunt quas magnam consequatur sed excepturi ipsam doloremque.</p> -->
-          <!-- <img src="" -->
-          <h3>Responsive web design</h3>
+          <img src="images/971.jpg" alt="" id="photo" class="blur">
+          <h3 class="fade">Responsive web design</h3>
         </div>
                <!-- 2ndcolumn -->
 
-
         <div class="column">
-          <!-- <i class="fa-light fa-code"></i> -->
-          <i class="fa-regular fa-file-lines"></i>
-          <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus inventore in, distinctio fuga aliquam fugiat qui ipsum sapiente nemo voluptatum deserunt molestiae sunt quas magnam consequatur sed excepturi ipsam doloremque.</p> -->
-          <!-- <img src="" -->
-          <h3>Clean code</h3>
+          <img src="images/5213655.jpg" alt="" id="photo" class="blur">
+          <h3 class="fade">Interface development</h3>
         </div>
 
            <!-- 3rdcolumn -->
 
-
-
-
-
         <div class="column">
-          <!-- <i class="fa-light fa-code"></i> -->
-          <i class="fa-solid fa-fill"></i>
-          <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus inventore in, distinctio fuga aliquam fugiat qui ipsum sapiente nemo voluptatum deserunt molestiae sunt quas magnam consequatur sed excepturi ipsam doloremque.</p> -->
-          <!-- <img src="" -->
-          <h3>Css animations</h3>
+           <img src="images/19199655.jpg" alt="" id="photo" class="blur">
+          <h3 class="fade">Css animations</h3>
         </div>
       </div>
-
     </section>
 
-    <section class="projects" id="Projects">
-      <span id= "projecttitle">Projects</span>
+    <section class="projects" id="Projects">     
+      <div class="projects-flex">
+        <span id= "projecttitle">Projects</span>
+        <div class="column-proj">
+          <img  id="photo" src="/images/1.png" alt="">
+          <h3 >Evolve restaurant web page</h3>
+          <div class="info">
+            <p>It is developed using HTML,CSS , JS</p>
+             <a href="https://github.com/nouhesham/Evolve-restaurant"target="_blank">More details</a>
+          </div>
+        </div>
+
+      <!-- another column -->
+
+
+        <div class="column-proj">
+          <img  id="photo" src="/images/2.png" alt="">
+          <h3>Landing page</h3>
+          <div class="info">
+            <p>It is developed using HTML ,CSS,JS</p>
+             <a href="https://github.com/nouhesham/My-Landing-project"target="_blank" >More details</a>
+          </div>
+        </div>
+      </div>
     </section>
+
+    <section id="contact" class="contactme">
+      <div class="emails"> 
+      <p id="collab">For Collaboration:</p>
+      <p class="email">Email:</p><a href="mailto:nourhanhesham263@gmail.com"target="_blank">Nourhanhesham263@gmail.com</a>
+      <p class="email">Github:</p><a href="https://github.com/nouhesham"target="_blank">Nourhesham</a>
+    </div>
+ 
+    <div class="wrapper">
+      <div class="button">
+      <div  class="icon"><i class="fa-brands fa-instagram"></i></div>
+     <span>Instagram</span>
+      </div>
+
+      <div class="button">
+       <div class=icon> <i class="fa-brands fa-facebook"></i>  </div>
+       <span>facebook</span>
+      </div>
+
+     <div class="button">
+        <div class="icon"><i class="fa-brands fa-twitter"></i></div>
+     <span>Twitter</span>
+     </div>
+   </div>
+    </section>
+
+    
+    
+
   </body>
   <script src="javaScript/javaScript.js"></script>
 </html>
